src/objects/C__c.object
<CustomObject>
    <fields>
        <fullName>A__c</fullName>
        <label>A</label>
        <referenceTo>A__c</referenceTo>
        <relationshipLabel>Cs</relationshipLabel>
        <relationshipName>Cs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <label>B</label>
        <referenceTo>B__c</referenceTo>
        <relationshipLabel>Cs</relationshipLabel>
        <relationshipName>Cs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>test2__c</fullName>
        <globalPicklist>test2</globalPicklist>
        <label>test2</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test1</label>
        <picklist>
            <picklistValues>
                <fullName>1111111111111111111111111111111111111111111111111111111111111111111111122222222222222222222222222222222222222222222222222222222222222</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33333333333333333333333333333333333333333333333333333333333333</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>C</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>C Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>